--- a/Thesis/kleurgeb.tex
+++ b/Thesis/kleurgeb.tex
@@ -692,12 +692,12 @@ histogrammen} te beschouwen. De uitgebreide versie $\mathcal{H}'_A$ van een hist
 $\mathcal{H}_A \in \{H_A,\widetilde{H}_A\}$ geassocieerd met een beeld $A$ defini\"eren we
 als volgt:
 $$
-\mathcal{H}'_A(c) = \sum_{k \in \Omega_{s_A}} \mathcal{H}_A(kleur(bin(c)+k))
-\cdot w_{A,c}(k) $$ 
-voor alle $c \in C'$, met $w_{A,c}$ een $\mathbb{N} - \mathbb{R}$ afbeelding en 
-$\Omega_{s_{A,c}}=\{k \in \mathbb{N} \mid s_{A,c}(k) \ne 0\}$. Indien $s_{A,c}(k)=\delta(k)$,
-$\forall k \in \mathbb{N}$, voor elk beeld $A$ en elke kleur $c \in C'$,  dan
-geldt $\mathcal{H}'_A=\mathcal{H}_A$.
+\mathcal{H}'_A(c) = \sum_{c' \in C'}} \mathcal{H}_A(c') \cdot w_{A,c}(c') 
+$$ 
+voor alle $c \in C'$, met $w_{A,c}$ een $\mathbb{C'} - \mathbb{R}$. 
+% Indien $w_{A,c}(k)=\delta(k)$,
+% $\forall k \in \mathbb{N}$, voor elk beeld $A$ en elke kleur $c \in C'$,  dan
+% geldt $\mathcal{H}'_A=\mathcal{H}_A$.
 
 \subsection{Gladde histogrammen}
 
@@ -717,22 +717,29 @@ De meeste uitbreidingen die beschreven worden in de literatuur
 lu:perceptually_weighted_histograms_for_ir,
 sural:perceptually_smooth_histogram,
 vertan:embedding_fuzzy_logic_in_cbir, vertan:fuzzy_histograms} zijn
-te herleiden tot het eerste voorstel van Swain en Ballard. Dat voorstel komt
+te herleiden tot (varianten van) het eerste voorstel van Swain en Ballard. Dat voorstel komt
 neer op het glad (smooth) maken van de histogrammen door de waarden van de bins
 te vervangen door nieuwe waarden die ook afhangen van de waarden van ``naburige''
 bins met een perceptueel similaire kleur. Het SCT-histogram is daarvoor zeer
 geschikt, vermits de ``naburige'' bins van een bin daarbij ook letterlijk naast
 die bin liggen \cite{sural:perceptually_smooth_histogram}. De gladde versie van
 het SCT-histogram is dan het corresponderende uitgebreide histogram waarbij bijvoorbeeld $$
-s_{A,c}(k)=
+w_{A,c}(c')=
 \left\{ \begin{array}{ll}
-\alpha^{-|k|} & \textrm{als } bin(c) \le 16 \textrm{ en } |k| \le R_1 \\
-\beta^{-|k|} & \textrm{als } bin(c) > 16 \textrm{ en } |k| \le R_2 \\ 
+\alpha^{|bin(c)-bin(c')|} & \textrm{als } bin(c), bin(c') \le 16 \textrm{ en } |bin(c)-bin(c')| \le R_1 \\
+\beta^{|bin(c)-bin'(c')|} & \textrm{als } bin(c), bin'(c') > 16 \textrm{ en } |bin(c)-bin'(c')| \le R_2 \\ 
 0 & \textrm{anders}
 \end{array}
 $$
-voor alle $(A,c,k)$ uit $\mathcal{F}_L(P) \times C' \times \mathbb{N}$, met
-$\alpha$, $\beta$, $R_1$ en $R_2$ vrij te kiezen parameters.
+voor alle $(A,c,c')$ uit $\mathcal{F}_L(P) \times C' \times C'$, met
+$\alpha$, $\beta$, $R_1$ en $R_2$ vrij te kiezen parameters en 
+$$
+bin'(c) = \left\{ 
+\begin{array}{ll} 240+bin(c) & \textrm{als } bin(c) \le 16 \\ 
+16 + \left( (bin(c)-16) \bmod 240 \right) & \textrm{anders}
+\end{array}
+$$ 
+voor alle $c$ uit $C$.
 
 Figuur 99 illustreert \ldots
 
